# tutus

./: .cache  .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PRODUCTION_GRADE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
agents/: base_agent.py  browser_agent.py  chat_agent.py  code_agent.py  computer_agent.py  docs_agent.py  files_agent.py  knowledge_agent.py  memory_agent.py  music_agent.py  project_agent.py  reminder_agent.py  research_agent.py  system_agent.py  vision_agent.py  windows_agent.py
core/: __init__.py  agent_router.py  audio_stream.py  config.py  context.py  context_monitor.py  conversation.py  direct_voice.py  engine.py  hotword.py  knowledge_graph.py  listener.py  log.py  lora_loader.py  markdown.py  memory_signals.py  orchestrator.py  pipeline.py  plugin_loader.py  proactive.py  rag.py  reminder.py  schemas.py  startup.py  streamer.py  streaming_tts.py  telegram_bot.py  tts.py  user_profile.py
skills/: browser_skill.py  code_sandbox_skill.py  computer_skill.py  documents_skill.py  files_skill.py  memory_skill.py  project_skill.py  rag_skill.py  spotify_skill.py  system_skill.py  vision_skill.py  voice_clone_skill.py  web_research_skill.py  whatsapp_bot.py  window_control_skill.py  youtube_skill.py
tests/: conftest.py  helpers.py  test_agent_router.py  test_agents_smoke.py  test_base_agent.py  test_chat_agent.py  test_context.py  test_conversation.py  test_core.py  test_core_extra.py  test_e2e.py  test_integration.py  test_knowledge_graph.py  test_memory_signals.py  test_modules_extra.py  test_orchestrator.py  test_proactive.py  test_project_skill.py  test_rag.py  test_schemas.py  test_skills.py  test_skills_extra.py  test_startup.py  test_ui.py
training/: conversations.jsonl  prepare_dataset.py  train.py
ui/: avatar.py  chat_area.py  chat_bubble.py  chat_data.py  constants.py  indicators.py  input_bar.py  markdown_browser.py  settings_panel.py  styles.qss  theme.py  window.py
web/: server.py
web/static/: index.html
