[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tutus"
version = "2.0.0"
description = "Asistente personal con IA, multi-agente, voz y escritorio"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.5,<7.0",
    "requests>=2.31",
    "openai-whisper>=20231117",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "edge-tts>=6.1",
    "pydantic>=2.5",
    "tinydb>=4.8",
    "python-dotenv>=1.0",
    "spotipy>=2.23",
    "selenium>=4.15",
    "webdriver-manager>=4.0",
    "openwakeword>=0.4",
    "mss>=9.0",
    "Pillow>=12.2",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "python-pptx>=0.6",
    "pygetwindow>=0.0.9",
    "schedule>=1.2",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "langdetect>=1.0.9",
    "comtypes>=1.1",
    "pycaw>=20181226",
    "PyPDF2>=3.0",
    "lxml>=5.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pip-audit>=2.10",
    "bandit>=1.9",
    "PyQt6-stubs>=6.5",
]

[project.scripts]
tutus = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "agents*", "skills*", "ui*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--no-header"

[tool.coverage.paths]
source = ["."]

[tool.coverage.run]
source = ["core", "agents", "skills", "ui", "web"]
omit = ["*/tests/*", "data/*"]

[tool.coverage.report]
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
line-length = 140
exclude = ["__pycache__", ".pytest_cache", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"ui/*" = ["N802"]
"core/direct_voice.py" = ["E402"]
"core/lora_loader.py" = ["E402"]
"core/markdown.py" = ["E402", "E501"]
"core/schemas.py" = ["E402"]
"core/telegram_bot.py" = ["E402"]
"core/tts.py" = ["E402"]
"core/agent_router.py" = ["E501"]
"core/knowledge_graph.py" = ["E501"]
"main.py" = ["E402"]
"training/train.py" = ["E402"]
"agents/browser_agent.py" = ["E501"]
"agents/docs_agent.py" = ["E501"]
"agents/knowledge_agent.py" = ["E501"]
"skills/code_sandbox_skill.py" = ["E501"]
"skills/web_research_skill.py" = ["E501"]
"ui/settings_panel.py" = ["E501"]
"tests/*" = ["N802", "E501"]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
allow_untyped_decorators = true
exclude = ["data/", "tests/", "training/"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
